baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__02_parser__syntax_errors.snap
---
source: target/debug/build/baml_tests-ddc6647912a5d7c4/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Broken"
    L_BRACE "{"
    FIELD
      WORD "field"
      TYPE_EXPR "int"
        WORD "int"
    FUNCTION_DEF
      KW_FUNCTION "function"
      INTEGER_LITERAL "123"
      WORD "Invalid"
      PARAMETER_LIST "()"
        L_PAREN "("
        R_PAREN ")"
      EXPR_FUNCTION_BODY
        BLOCK_EXPR "{}"
          L_BRACE "{"
          R_BRACE "}"
    FUNCTION_DEF
      KW_FUNCTION "function"
      WORD "BadUnionPattern"
      PARAMETER_LIST
        L_PAREN "("
        PARAMETER
          WORD "x"
          COLON ":"
          TYPE_EXPR "int | bool"
            WORD "int"
            PIPE "|"
            WORD "bool"
        R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "string"
        WORD "string"
      EXPR_FUNCTION_BODY
        BLOCK_EXPR
          L_BRACE "{"
          MATCH_EXPR
            KW_MATCH "match"
            L_PAREN "("
            WORD "x"
            R_PAREN ")"
            L_BRACE "{"
            MATCH_ARM
              MATCH_PATTERN
                WORD "a"
                COLON ":"
                TYPE_EXPR "int | b"
                  WORD "int"
                  PIPE "|"
                  WORD "b"
              COLON ":"
            MATCH_ARM
              MATCH_PATTERN "bool"
                WORD "bool"
              FAT_ARROW "=>"
              STRING_LITERAL "bad"
                QUOTE """
                WORD "bad"
                QUOTE """
            R_BRACE "}"
          R_BRACE "}"
    FUNCTION_DEF
      KW_FUNCTION "function"
      WORD "MixedLiteralAndTyped"
      PARAMETER_LIST
        L_PAREN "("
        PARAMETER
          WORD "x"
          COLON ":"
          TYPE_EXPR "int"
            WORD "int"
        R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "string"
        WORD "string"
      EXPR_FUNCTION_BODY
        BLOCK_EXPR
          L_BRACE "{"
          MATCH_EXPR
            KW_MATCH "match"
            L_PAREN "("
            WORD "x"
            R_PAREN ")"
            L_BRACE "{"
            MATCH_ARM
              MATCH_PATTERN
                INTEGER_LITERAL "42"
                PIPE "|"
                WORD "n"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              FAT_ARROW "=>"
              STRING_LITERAL "mixed"
                QUOTE """
                WORD "mixed"
                QUOTE """
            R_BRACE "}"
          R_BRACE "}"

=== ERRORS ===
Error: Expected function name, found IntegerLiteral
   ╭─[ syntax_errors.baml:6:10 ]
   │
 6 │ function 123Invalid() {}
   │          ─┬─  
   │           ╰─── Expected function name, found IntegerLiteral
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected return type (->), found LBrace
   ╭─[ syntax_errors.baml:6:23 ]
   │
 6 │ function 123Invalid() {}
   │                       ┬  
   │                       ╰── Expected return type (->), found LBrace
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected '=>' after pattern, found Colon
    ╭─[ syntax_errors.baml:18:19 ]
    │
 18 │         a: int | b: bool => "bad"
    │                   ┬  
    │                   ╰── Expected '=>' after pattern, found Colon
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected expression, found Colon
    ╭─[ syntax_errors.baml:18:19 ]
    │
 18 │         a: int | b: bool => "bad"
    │                   ┬  
    │                   ╰── Expected expression, found Colon
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected RBrace, found EOF
    ╭─[ syntax_errors.baml:27:1 ]
    │
 27 │ }
    │ ┬  
    │ ╰── Expected RBrace, found EOF
    │ 
    │ Note: Error code: E0010
────╯
